--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
-  text-align: center;
+.container {
+    background: slateblue;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main-title { color: azure }
+
+.container-input {
+    background-color: azure;
+    border-radius: .5rem;
+    padding: .5em;
+    display: flex;
+    align-items: baseline;
+    margin-bottom: 1rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.cep-input {
+    border: none;
+    background: none;
+    outline: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+.search-btn {
+    background: none;
+    border: none;
+    cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+main {
+    color: black;
+    background: azure;
+    border-radius: .5rem;
+    padding: .5em;
+    min-width: 400px;
+    max-width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+.cep-info-container { margin-left: 1rem }
+
+.cep-info-item {}
+
+.info-key { font-weight: 600 }
